--- a/client/style.css
+++ b/client/style.css
@@ -33,7 +33,7 @@ nav a {
 
 nav a:hover {
     background-color: white;
-    color: #4bb1a9;
+    color: #5f5fc8;
     transform: translateY(-2px);
 }
 
@@ -53,4 +53,15 @@ input {
   margin: 20px 0;
   width: 50%;
   padding: 10px;
+}
+
+.imagecontainer {
+  position: fixed;
+  top: -50vh;
+  left: 0;
+  width: 100%;
+  height: 150%;
+  opacity: 0.30;
+  z-index: -1;
+  object-fit: cover;
 }
