--- a/client/about.css
+++ b/client/about.css
@@ -1,9 +1,9 @@
 h1 {
-    text-decoration:none ;
     text-align: center;
     color: white;
     margin-bottom: 20px;
     font-size: 50px;
+    text-decoration: none ;
 
 }
 
@@ -40,7 +40,8 @@ nav a:hover {
 
 .container {
   text-align: center;
-  max-width: 600px;
+  max-width: 1000px;
+  max-height: fit-content;
   margin: 0 auto;
   background-color: white;
   border-radius: 10px;
@@ -56,13 +57,32 @@ input {
   padding: 10px;
 }
 
+
+
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px; 
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .imagecontainer {
   position: fixed;
-  top: -50vh;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 150%;
-  opacity: 0.30;
+  width: 100px;
+  height: 50px;
+  opacity: 0.25;
   z-index: -1;
   object-fit: cover;
 }
